--- a/fuse_lidar_camera.ipynb
+++ b/fuse_lidar_camera.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_matrices(intrinsic_matrix_path, extrinsic_matrix_path):\n",
+    "    '''\n",
+    "    Input - velo_2_cam, cam_2_cam\n",
+    "    Output - rotation_matrix, translation_matrix, intrinsic_matrix, extrinsic_matrix, rectification_matrix, projection_matrix\n",
+    "    \n",
+    "    '''\n",
+    "    velo_2_cam = open(extrinsic_matrix_path, \"r\")\n",
+    "    cam_2_cam = open(intrinsic_matrix_path,'r')\n",
+    "\n",
+    "    lines = velo_2_cam.readlines()\n",
+    "    lines2 = cam_2_cam.readlines()\n",
+    "\n",
+    "    rotation_matrix = np.array(lines[1][3:-1].split(),dtype=np.float32).reshape(3,3)\n",
+    "    translation_matrix = np.array(lines[2][3:-1].split(),dtype=np.float32).reshape(3,1)\n",
+    "\n",
+    "    intrinsic_matrix = np.array(lines2[19][5:-1].split(),dtype = np.float32).reshape(3,3)\n",
+    "    extrinsic_matrix = np.hstack((data_r, data_t))\n",
+    "    rectification_matrix = np.array(lines2[24][11:-1].split(),dtype = np.float32).reshape(3,3)\n",
+    "    projection_matrix = np.array(lines2[25][11:-1].split(),dtype = np.float32).reshape(-1,4)\n",
+    "\n",
+    "    return rotation_matrix, translation_matrix, intrinsic_matrix, extrinsic_matrix, rectification_matrix, projection_matrix\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rotation_matrix, translation_matrix, intrinsic_matrix, extrinsic_matrix, rectification_matrix, projection_matrix = load_matrices( 'calib_cam_to_cam.txt', \"calib_velo_to_cam.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,6 +127,36 @@
    "metadata": {},
    "source": [
     "# Create dataframe of lidar points "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_points_data(lidar_points_file) :\n",
+    "\n",
+    "    '''\n",
+    "    Input -  Path to velodyne points as .bin file extension\n",
+    "    Output - Pandas DataFrame of the points with columns - X, Y, Z and I\n",
+    "\n",
+    "    '''\n",
+    "    \n",
+    "    raw_pts = np.fromfile(lidar_points_file, dtype=np.float32).reshape(-1,4)\n",
+    "    points = pd.DataFrame(raw_pts,columns=['X','Y','Z','I'])\n",
+    "    points = points[points['X'] > 0]\n",
+    "\n",
+    "    return points\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "points = create_points_data('lidar_points.bin')"
    ]
   },
   {
@@ -564,40 +632,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fs_depths = np.load('test_outputs/depth_meter.npy')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lidar_points_comparison_np = [(v,u,z) for (u,v,z) in lidar_points_comparison]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((604, 146, 17.94), (146, 604, 17.94))"
+       "(63.95429022841049, 785.075927734375)"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lidar_points_comparison[0], lidar_points_comparison_np[0]"
+    "fs_depths = np.load('test_outputs/depth_meter.npy')\n",
+    "fs_depth_disparities = []\n",
+    "fs_depth_meters = []\n",
+    "for i in range(370):\n",
+    "    for j in range(1226):\n",
+    "        depth_disparity = float(fs_depths[i,j])\n",
+    "        if depth_disparity > 0 :\n",
+    "            depth_meter = (959.7910 * 0.5351) /  (depth_disparity + 1e-6)\n",
+    "            fs_depth_meters.append(depth_meter)\n",
+    "            \n",
+    "        fs_depth_disparities.append(depth_disparity)\n",
+    "\n",
+    "max(fs_depth_meters), max(fs_depth_disparities)"
    ]
   },
   {
@@ -631,26 +693,6 @@
     "        if grid[i,j] != 0 :\n",
     "            difference = abs(grid[i,j] - fs_depths[i,j])\n",
     "            differences.append(difference)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float32(4.984214)"
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.mean(differences)"
    ]
   },
   {
