--- a/Fuse_Camera_Lidar/Testing own data/fuse_lidar_camera - Kopie.ipynb
+++ b/Fuse_Camera_Lidar/Testing own data/fuse_lidar_camera - Kopie.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,8 @@
     "import matplotlib\n",
     "from scipy.interpolate import griddata\n",
     "# Disable scientific notation\n",
-    "np.set_printoptions(suppress=True)"
+    "np.set_printoptions(suppress=True)\n",
+    "import json"
    ]
   },
   {
@@ -1540,6 +1541,66 @@
    "source": [
     "np.median(gt_depths), np.median(predicted_depths)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"sensor_rig.json\", \"r\", encoding=\"latin1\") as f:\n",
+    "    data = f.read()   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UnicodeDecodeError",
+     "evalue": "'charmap' codec can't decode byte 0x8f in position 62: character maps to <undefined>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m jig_lines \u001b[38;5;241m=\u001b[39m \u001b[43mjig_info\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreadlines\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\G7PMRT8\\AppData\\Local\\Programs\\Python\\Python39\\lib\\encodings\\cp1252.py:23\u001b[0m, in \u001b[0;36mIncrementalDecoder.decode\u001b[1;34m(self, input, final)\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mdecode\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28minput\u001b[39m, final\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[1;32m---> 23\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mcodecs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcharmap_decode\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43merrors\u001b[49m\u001b[43m,\u001b[49m\u001b[43mdecoding_table\u001b[49m\u001b[43m)\u001b[49m[\u001b[38;5;241m0\u001b[39m]\n",
+      "\u001b[1;31mUnicodeDecodeError\u001b[0m: 'charmap' codec can't decode byte 0x8f in position 62: character maps to <undefined>"
+     ]
+    }
+   ],
+   "source": [
+    "jig_lines = jig_info.readlines()\n",
+    "data = json.load"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'PEBF\\x11ÐZÍ\\x01\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x01\\x00\\x00\\x00\\x17ªº>\\x9fTçÇÁ*2Ìc\\x0fM\\x06»\\x80eÇÛ\\x85\\x92¹D½AØ\\tf~\\x0cÚ\\x01-D^\\x8e\\x0e;\\x95V\\x8f´}/Hè§ê\\x97\"5Ëë¶ð\\x8c\\x1aüúy=ìgÜã¹^\\x14\\x88\\x98\\x8bîö¡3Ç\\x1cÔ\\x84}d\\x9b\\x14|£O·\\x9a0²\\n+/ç\\x08æ\\x0bÖ\\x9a\\x11\\x1bÄ\\x88\\x13\\xa0x-ú:\\x94¸ìWççc5»dr-©x©k#qHªàñ×Ðößáâ\\x8axÕ´Ã\\x90¤ø\\x00\\x90ÚÝ!Ø³_\\x89XåðN¼\\x17øÐÝ\\x04\\x06\\x92ò\\x980}+\\t\\x85Uq°\\x8a\\x81\\\\\\x07T?\\x85nÚqwðµ\\x7fële=Û¬\\x10\\x1e}\\x1au8®C\\x98@ÁÀð\\n\\x0bÈÊ\\x85éÊ\\x8e\\x1fI\\x96ªw\\x00No\\x8b\\x9eHPaß\\x8a-ð²Q\\x8b\\x02:kÔs~R\\x7f´iØ\\x1biké\\'(º\\x1a ý\\x81\\x7fÙÇÔ\\x01<õa\\x1d\\\\\\x13ä°³ÊÂ\\x99\\x91¨L\\x83Té\\tjm2Ö\\x9cu²;ü\\t4\\x88Yé´A:Jèç(\\x83$:ÒÑ´þS\\n\\x1ae¢\\x85\\x84êb\\x13Ç\\x9d°G^\\x88ò\\x97Xþ]\\x82\\x18\\x9eb·Ö^\\x0fÌçÒ_bÜ¬øýf\\x08\\x19ògû\\x87h\\x9b:\\x83û÷\\x84¹RûHÔÊ>r\\x80èÊ5|\\x88»®<æ½ \\x87ªt\\x13ø]X{î¶pæ\\x83æÖÇ9$BB\\x19\\x10=\\x01\\x1bÅR\\x9eàø·\\\\\\x88«Þä\\x0c\\x8f½\\nÝv%÷«Ö\\x97uª\\t:\\x94§Åëö.W!|þ\\xadãÎ²\\x90\\x82,\\x1b³\\x0f\\x0fzz ³q\\x9aHÁùá\\x10êG\\x1d(¥M\\x8b°¿\\x847!Ê\\x14pò.Eïé\\x05åÁ±å?îÂ¬¶òáÒ(ßêI\\x1b\\x90Æ÷¤2,L\\x94/þ\\x8aðø\"\\x88ýSPé«[\\x01\\x9d$\\x87+\\x83I\\x18jcjHß\\x17hk;ì\\x0e/[\\\\\\x94\\tKþ^ï¸s/BÒÈ>\\x98% Î\\x97ÀõJ\\x06îÁ{=ëfÖô½Æ&\\x8b\\x8f\\x96÷ò¿\\x18À\\x0cÊFzu\\x89Û\\n\\x12$U\\x1aWÀ\\x83~<ê\\x9aËï\\x01\\x0f]Ðâe\\x17¢w-ë\\x11÷¸ýXìñ\\x95ºe¼\\x10ð®½<ø½´ÌM\\x18rÿ^XE³¶Ló\\x81æ\\x97\\x05-\"M[#\\x123Þ\\x0b#ÍEh«{º·ýë@Ã\\x81pY\\x91\\x15K¸5\\x1aQÁã\\x19Z\\x08¦õ{þ_5©ûá^ã±G9Õ¯\\x04O½\\x9f!qZ\\x01\\x1e[-?d¸\\x07ÝÒð^põ\\x82\\x06[»©p\\x07Ci\\x93\\x96ã\\nwÓ\\x951Îî¬\\x86\\x1e:|\\x15vs\\x1f<ë\\x0e\\x94@\\x02?¾w=¢,<í\\x93\\x7fçÝÜ\\')\\x17üQÖ\\x98À«¦pJ\\x07ÝP»\\x1dºÓ¡&÷aõ÷Á\\x8bª^Ú©ÅV.v\\x9aw\\'\\x97á!\\x9030Ñï¶ô\\x7f\\x1bòÁ{&ùcÖÒ¨]8\\x9dm\\x1e\\x9e\\x93ÓGTy§$\\x1fýãï<\"çRÈÄha±õ%\\t¦\\x8ar{Æ½\\x92:x?®¸.û,/0\\x8aïà\\x8f£a\\x8e\\x0fÉ»\\xad8à\\x87;\\x80ô\\táäLCI»\\xa0gæ\\x83É¸\\x17<&OJ\\x86]Ü\\xadnÀF\\x95úéYÉæÊ²»\\x86ýÒz¸þQ\\x9eÎ¥Í(IqÁ.&\\x0eD\\x11Zï\\x1d\\x1e\\x9d.\\x18\\x8e3\\n?Þª\\x0b\\x0f\\x16A#ñ¢B\\x98TÁí,\\x13\\x0cÉÖó\\x8bÈ»\\x17T®\\xa0{,Kk\\x8a\\x01ÿ\\t\\x12º\\x88\\'äªa\\x83\\x11\\x08hßfx\\x03\\x11é8\\x8eÕ]^Ý\\x14,\\xad\\x069÷\\x94mçÃÊ*6ýt\\x07M\\x1e»²®ÍUüâÜ-\\x83GÃ\\x0efj8ì\\x14+VR\\x89\\x0e©ÅÛ·â-}\\x16\\x84ïT\\x97(8Òë¶ÎM\\x0eîõB0ñbÒù¹F\"\\x97\\x84»ìò·.Û\\n\\x87\\\\?a\\x8a\\x83HGn2C\\x05\\x85Ñ\\x16(÷\\x9fÇþ\\x13\\x0fUÒüe\\x0c«};ü\\x04\\x99´ì0ôý\\x88ºv¸\\x0eÜ´½\\x02÷¹\"\\x9a¯j\\x13ÿQEJ|¹aî\\x80Þ¸\\x1404F\\\\äBÛVÑ\\'\\x9bº\\x02z}\\x91\\x1du:8\\x14½@öPþQ\\x9eÎ¥Ì(&ÈdêÓû\\x05ê\\x9f/¦>3\\x01ï&È2<û§\\x19\\x15µ\\x82èl¬_ý\\x8c¡ËÁä\\x94\\x03\\'\\x01\"¨N\\x1bÒ2s\\x9céo%êéÂÆ-\\x887¦Ó\\x95%\\x9f\\x8chæs±1?Ô\\x8aªß\\x90c\\x13Í½^j\\x88rý½¾èý\\x0cä¨¬l>\\x7f¨\\x95\\x07Ê$TCeñrì\\x93¨Ïò³Ý´\\n~Ú´\\x0b\\x86m½p\\x1eN¤\\x8f]L¨¦:i\\x8a#Ðúj\\x1fÒ\\x9f¯¼Vë\\x83H²¾©\\x06>\\x84@Úhì,\\x9aÔC>q\\x1dd\\x14\\x83¤{,üí8½²ó\\x1dÐl\\x11§¬çF\\xadfÙ«%Bîi\\x0cèfâ\\x81\\x05}¢m*_\\x15\\x18uÏl¶@\\x08ò~\\x97!u~\\x9dI(,ì§?2\\x19¯z¤ÔÃä©ßt\\x14²¼r3_Ëèí}~M\\x06í\\x17\\x16¼ªJ;BÌ(&«ógonÙê\\x9fW\\x94Í\\nØ\\x1e²È20ûÎ)Ä\\x8a±èl¬eç±Þ\\x92Ãä\\x94\\x03$ÕLuq`\\x962s\\x9eU8\\x02%bÑÆ-Ï0\\x97øö\\'è\\x8chæQÀVUÏhªß\\x99\\x13þ\\x9f\\x81i\\x8a\\x88rñ\\x8by\\x98\\x17û,¨¬l*s1J½\\x98$TCa\\x05¦mòÈ\\x95ò³ßmT-{\\x08R\\x86m\\x82T¡9§ÅÕL¨¦\\x17ê3\\x9d\\x12&j\\x1fÛ\\x89S¢ª\\x01aH²²\\x19xµ\\x82º^hì,Àw\\x10\"\"åd\\x14\\x83£Ú)%õhø²ó\\x1c\\x05a\\x10\\x96ÁÙF\\xadD\\x88D\\tÝZ&\\x0cèfÚwÁ\\x05U\\'*_\\x1e\\x04f\\x11ý13\\x08òu|\\x9aæ\\x9b\\xa0ò(,ì@È:\\x8eØ?¤ÔÃâQ\\x1cm\\x8a¦¸r3Tg[DÜ\\t\\x1d\\x06íû\\x11%ä\\x04\\x88&Ì(&\\x81\\\\O\\x15M8ê\\x9f@\\\\^È\\x80ºWÈ27\\x98¨X/¸Lèl¬ê\\x9c\\x9d\\x1eÖoä\\x94\\x03ß\\x1fãÎî\\x94\\x192s\\x97\\x88¼\\x96ÀÇ<Æ-?O\\x1dÎ`\\xa0\\n\\x8chæE§\\x914\\x14\\x95ªß\\x85\\x91|\\x8e\\x80~#\\x88ré¬Î]d+c¨¬l\\x9d\\x07\\x99\\x9e65$TC\\x9b>C\\x9e\\x1fGæò³ß,\\\\\\x8eN¾\\x9a\\x86mr\\x8fWÆX\\\\mL¨¦\\tLÔ\\x99ì\\x11j\\x1fÉÇý2±\\x15ÅH²ªÎ\\x9cHæâ\\thì+·\\x80¬+3Fd\\x14\\x83T\\x08Z\\x9dy\\x87±²ó\\x1díñ©!fµF\\xad³´ýÇ;»\\x8e\\x0cèfËI¸\\x9eÈ3*_\\x0e7Ä\\t{\\x19§\\x08ò`\\x8dR9Ã:º(,ë\\x83\\x7f\\t\\x06ô\\x9e¤ÔÃ\\x16#¤7µFØr3W\\x1bO(æSÏ\\x06í÷þ.#\\x18îIÌ(&\\x8d\\x1f|.\\x96þê\\x9fuûé\\x06\\x9fêôÈ2Ø¦RÑ\\x0c\\xad\\x08èl«\\x8dMûõá\\'ä\\x94\\x03Ð\\x04eL×?\\\\2s\\x94ý@\\x07ùÍÆÆ-4I®ÔÊÌ7\\x8chæO5\\x03Q\\x14±ªß½[ë\\x85À\\x84ÿ\\x88r\\x1eäî\\x0eã\\xa0O¨¬k\\xadÎOM;u$TC\\x93«Y8²»Cò³ØpÜè\\x9cLÈ\\x86mkpÀÉ5\\x83âL¨¦\\x0fÍlR¥ïj\\x1fí°Ú\\x81\\x8fjªH²H\\x92\\x04õ\\x98\\n\\x13hì+(ÞÇ^@\"d\\x14\\x83Pî\\x80üì\\x16;²ó\\x1f\\x99s\\x9fp0LF\\xad¨E\\x1f\\x9fýï\\x17\\x0cèfÎ(\\x1bá\\x9dî*_\\x9d\\x10dÖÓ¼O\\x08r\\x99;\\x89`Æ\\x97´(,ì¾g/ìzZ¤ÔÃ\\x10Ý\\x06eçß\\x94r3W\\x85\\x12\\x9eb \\x14\\x06íéãU\\x8c\\x0e;(Ì(&\\x8d\\'\\x0f²\\x16÷ê\\x1fn\\n\\x89]\\n\\x92OÈ²Â$iÖÒûóèlª3?)2\\x17aä\\x94\\x03ÒýîHU|§2s\\x96\\x11|\\x94o\\x80»Æ-.a>g¡T\\x14\\x8chæLô[§<\\x9cª_¾$rÔ4\\x08R\\x88ò\\x14x3Ý\\x01:ÿ¨¬jû{^\\x84õ\\x98$TC\\x91p\\x87]\\x91\\x0c\\x8cò³ØÖ-%?=\\x16\\x86mo\\x89°1ÊÍ2L¨¦\\n\\x96uHk\\x97j\\x9fõüVE¸\\x97\\x9bH2[×hÞÙ8Yhì*\\x04KT\\x86(éd\\x14\\x83SºÌøgeh²ó\\x1b\\x86ªDYèwF\\xad¬\\x06»8ÛE\\x00\\x0cèfËZ\\x10Yº\\x10*ß\\x0eyÂÞ\\x9cô0\\x08rf6\\x91!\\x05 \\x8d(,ê\\x05\\x08Edoâ¤ÔÃ\\x10/\\x10\\x82_ú\\x84r3VÕ\\x8bíÏ!Ù\\x06ííM\\x0f\\x17\\n\\x94ÙÌ(&\\x89éÃ\\x8c<\\x80ê\\x1fI\\x04Ïr\\x81/\\x02È² GL¸á\\x06°èl©\\x04:Ó\\x828½ä\\x94\\x03Ôäç®BWô2s\\x94\\x8cÔ¨·\\x94ÜÆ-\"\\x11C´\\x1f\\x0b?\\x8chæEÍ7Âôhª_\\x85Öx¦ \\x87å\\x88òïï±.ùÀ¹¨¬iX(\\x8emÅ_$TC\\x96\\x95\\x16:ª\\x16ëò³ØÅ¶\\x8aHG:\\x86mc¨9\\x92\\x84;^L¨¦\\x01\\x91ø±ö\\x9cj\\x9fÁc\\x05\\x95\\x16A\\x97H2¬©e\\x8dËè*hì).tz\\x83àäd\\x14\\x83[>dÒì\\x81A²ó\\x19MÕ\\x04B\\x91ßF\\xad\\xa0¹8\\x8böÈi\\x0cèfÝ¯Þ<\\x10%*ß\\x1eg\\x1fã\\x82ui\\x08rk\\x17µ\\x07{þÅ(,éF\\x88\\x8d¨µ6¤ÔÃ\\x18-\\x88\\x8a>\\x85¹r3Y\\x11P$Ïk:\\x06íáÝb\\x19¿0ôÌ(&\\x97.\\t´\\x9f\\x83ê\\x1f\\\\é~ãâ}µÈ²*´!Ï\\x9a·qèl¨*J¨?éQä\\x94\\x03ÛxªbA£\\t2s\\x9d\\x8fÈy$¤\\x1aÆ-&\\x8a\\x1a±¯5<\\x8chæP\\x06öÏtxª_\\x99lWÿ\\\\\\x98L\\x88òéù\\x1e»\\x8f¥_¨¬hç\\x1b`&FV$TC\\x9fòêã\\nø\\x03ò³ÝÁÆ\\n½Îß\\x86mgz,{G\\x00ØL¨¦+;\\x9aÉÔÜj\\x9f×ó\\x01ôõ=8H2¨\\x0eà\\x99\\x91\\'dhì(u÷\\x02=@}d\\x14\\x83Y\\x81\\x1cßÍ¯ê²ó\\x18ëN ªXÑF\\xad¤Zc\\x927Üö\\x0cèfâÍsu\\x0e;*ß\\x15v\\x81ý÷æ¶\\x08rw\\x11Hå\\x18\\x06t(,÷Â¨Kl\\x060¤ÔÃ\\x19»z\\x1b_\\x0b÷r3].\\x18«íjÐ\\x06íäg0\\x0cå\\x95<Ì(&º·®¡°\\nê\\x1fSô°ùµ½cÈ²65\\x92 »l\\x88èl·`ü\\x9c\\'zçä\\x94\\x03Ø\\x01\\x17ÁæGå2s\\x9aUM\\nêÕDÆ-%\\x05^g\\x07é\\x1d\\x8chæsðZùºmª_\\x90wÌJ÷\\x10\\x08\\x88òöþ\\x0bßµ\\x1cÔ¨¬w\\x1a\\x81æ\\x80¬×$TC\\x9b6rßö²Ýò³ÛÈ\\x05\\x9dQ\\x14-\\x86mZ\\x07\\x08I\\x81s£L¨¦H\\x86·¸UZj\\x9f¯(ì\\x9b¢\\x05\\x8eH2µþ.P¥Í\\x94hì7\\x19\\x0eÖ0ö\\x8dd\\x14\\x83Z~b\\x1aÆ\\x9c;²ó\\x1f\\x01\\x88ã\\x8dqLF\\xad\\x9aT\\x02\\xa0\\xa0ñ\\x98\\x0cèf\\x9ebc\\x8b\\x89\\x00*ßn\\n,KV\\x95ð\\x08rt¶úM\\x96\\x1a\\x8e(,÷4ïêÅß¬G[\\x05\\x129ß<ÅA¨àâ¹p\\x87¦ÛÙ\\x0e\\x9c¦\\x13×j:ó¯Æhv\\xad\\x15³±U}5TãÕ$X§ä\\\\´\\x03=bðüB]Pf\\x0c>®V\\x9cCûïî\\x1b\\nÐýú\\x84Â\\x90\\x13H\\x96¯k\\x07Il\\x94¤ÝSuÖ\\x9d¿Q\\x92«9m4ÈIlg\\x03<í0\\x8cp3+°v=¼\\x03\\x15ÌÁIûé\\x91\\x18j«4,z$Ñè£×Ö\\x8c\\x87¬}\\xadeæAAi-Ò\\x0fjjoÑN`\\x9eHë¢{ÉÞ\\x08\\x03ù5\\x85G»\\x8d?®²ý\\x0eàÜ{îõ\\x8c8Ü\\tþÑlée¬<¸ÌM+Ë\\x0eüÜiÞ7\\x037¤\\x1f\\n\\x05(K\\x8dôE¥\\x07\\x80\\x03Ï}\\xad§¯æPé\\t\\x96¤ìCÞ¥D«h°\\x13Ê¯u-÷\\xad:\\x9c«~-êVMH»\\x8c~æ\\x96C¤P_GSL\\t\\x163Ë\\x08ûW\\x94îà»l\\x8b£ÜA|ýÒzÌg$ê¡ÃQH\\xa0\\x1fµ±H}-eÙ°pwó.\\x18\\x8e3\\n5Ñ¾\\x0c\\x05\\x02xL!¦J\\x90R×d¸\\x80\\\\\\x8f\\x91¯Þ\\x9d\\x9ck\\\\\\xa0\\xa0j\\x16TU\\x9f\\x9aÏVMÞ\\x91(ðªo\\x91\\x1e8gîsu\\x02\\'ñ\"ÀW}8´x,«\\x01\\x12õ\\x93xÓõÀ7?òs\\x0fM\\x0e\\x8b±\\x98×À\\x90\\x87®L\\x80GÓ{|e0Ç\\x14#\\\\H\\x95\\x1e\\n\\x99Yè¸|<DÃþ&\\x9fã>Ôçªö\\x7f\\x1fòíx\\'\\x00.4vgO}\\x8b\\x10.rÿ(ø!ñjÝúo\\x1f\\x15<\"\\x1cmÕ[\\x19\\x03\\x100\\x11,}qM»ÿæ\\x1f3î\\x1dêaþ+À\\x9aU6ZoÙ¨J×ÉybÒÚogÎ\\x86\\x9d\\x96e<\\x93Ñ\\x9bV\\x98Ýn\\x86Ï\\x1e\\x9fàÄ\\x85\\x8b\\x87È\\x84K\\x95\\x9bÙ8Î\\x08£\\x91)1\\x8d\\x04*+ñ\\x9c/\\x01ª¡¿Ï]ÚC\\t\\x00/\\x19hlU\\xa0Áú;\\x1a/§\\x0e\\x04L\\x9e9a§\\x91Û`\\x04Û´f-@_ úÆ££Q\\x18vUÛ\\x99ð\\x04TÐ±\\x96ñÍF¤ÊP5\\x1e\\njá\\x7fY*Û\\x82\\x11\\x19ïY(ö\\x11\\x8cs~¢ZïçNèù?ÀÁÏQ\\x1b&¤ï6ê\\x9eW\\x1f`ºhDÆ§\\x12\\x8c\\x15\\x1bY¨«ë¡B~±\\n\\x81\"\\x1al\\x11bÇ*!<ðï\\x16·¼÷¯\\x99è²0w\\x9cE\\x03\\x9a¯\\'\\x8eà_@ôÂ\\x08\\x11[\\x1aa\\x8dñ0\\x9b\\x81ß\\xa0}=\\x18æ$\\x15\\x91Õ[\\x19c\\x95Ø\\x0bd\\nqMÃ\\x9eº¬\\x97#yêaýÐ\\x12¸3KVoÙ¨\\x86\\x85§Ý/DÚog08\\x992\\x9c\\x1b8Ñ\\x9bX\\x1d^\\x83\\x98\\x80\\x02\\x9fà0¾\\x84Ê×\\x16\\x84\\x95\\x9bÙ\\x1aîwÚ?±1\\x8d\\n\\x14\\x02Ç\\x90\\x9f\\x0bª¡»5\\x0c\\x1e6¢*/\\x19hÃWv¾\\x94\\x10\\x1a/§ò¦\\x0f¢\\x80\\x0b\\x8e\\x91ÛeKTåýô\\x18_ ýÑì}jõ\\x05UÛ\\x99Ü\\x82\\x06\\x16{±ñÍO\\x8f?Vùz\\x9ajáyÜè\\x06Ë®AïY(\"²D°PøZïçµ=ÀDpP\\x99Q\\x1b\\'\\x8f=l\\'-O\\x1f`³>¯÷\\n\\x80<\\x15\\x1bY\\x91\\x91©´\\x90?±\\n\\x8a\\x04\\x1cÁîÇÅ*!7ÍS>dÐ8¯\\x99ècºzÁ\\x8fæ\\x9a¯\\'w\\x9c\\x11ùo§\\x90\\x11[\\x19Ðªï¼Þòß\\xa0t\\x93\\x02.3CÿÕ[\\x19Jw\\x96ËI·qMÔCÑ¡Ñ\\xa0óêaówÛ\\x19°8\\x99oÙ¨¢\\x1b\\x90ñ70Úog6À\\x7fîzf\\x92Ñ\\x9b[Êk¹¿\\x1bó\\x9fà7\\'?&br\\x03\\x95\\x9bÙ\\x0eÈ Q\\x06ù1\\x8d\\x10p\\x0eëî6\\x16ª¡N8Ø\\x04\\x1d\\x9aë/\\x19h\\xadóñ´$ò\\x1a/§øà\\th¸\\x03\\x0c\\x91Û\\x9cÛ!^ñ\\x92\\x8d_ çÆ·µÿ®YUÛ\\x99ÍV\\n·ýïñÍ]/ü²/\\x1fkjá\\x8ds|\\x15\\x84ËÑïY)\\x92\\x1eÏ©HlZïç¸\\x9b=æåaðQ\\x1b\"ñ\\x8aÎÍ³M\\x1f`úAï¸ÐÝ»\\x15\\x1bY\\x80I³\\x00\\x8e}±\\n\\x99Ýë@\\x83ò²*!Æmï\\x14\\x1b\\x1b^¯\\x99éæk\\x1d½Ô\\x0e\\x9a¯\\'xm\\xadMÔ];\\x11[\\x1a\\x193\\x88\\x9fÂ±ß\\xa03\\x10Â\\x16ÐYÿÕ[\\x19FI\\x02?Â+qMàcâ£\\x1c\\x1dªêa\\x1e)böÙóuoÙ©_¤\\x80=µðÚog;^G \\x03jsÑ\\x9b]Å\\x84-fÖê\\x9f`\\x12y\\x81\\x81\\x08\\x14Ø\\x95\\x9bÙ\\x07ÊØ¯ÞÏ1\\x8d)\\x080þú\\nãª¡\\\\d\\x9bAz\\x8aº/\\x19h\\x8d\\x1cÊ¢¾\\x12\\x1a/§ú\\x87øO?\\x9d¶\\x91Û\\x99©5mß7i_\\xa0àÊ\\x9c9\\x91]ÑUÛ\\x99Ííez<jñÍyXÏ\\x8c\\x0fp9já©¢¾¹ä\\x05\\nïY)kn*7É^Zïç»ÔVâHØ\\xa0Q\\x1b×\\x12Èg\\x0fW\\x08\\x1fà·\"J+\\x0cÖw\\x15\\x1bY\\x86\\x8f\\x8d\\x8f\\x1c\\x13±\\ny\\x87¼\\x10\\x1aÖ\\x91*!Ó\\x91£í\\x06\\x9d\\x99¯\\x99êoYëjêÜ\\x9a¯\\'{.\\x08æ\\x17\\x9bW\\x11[\\x19AF=\\x9eA\\x85ß t\\x91V\\x10M\\x97·Õ[\\x19Lk2c\\x81/qÍû\\x15jÁ|.Ðêá&Ú\\x91g*÷yoÙ©Ó{çuó§Úog8®\\'Óüò\\x1aÑ\\x9bX\\x8b\\x94«\\\\\\x84Ç\\x9f`?\\x1dy\\x1f\\x04§k\\x95\\x9bÙ\\x06ÂgÛs31\\n*m²C\\t\\x0fXª!WÔï\\x8d\\x905D/\\x19fh\\x7f@äUM\\x1a/§ø\\x04úÀñyý\\x91Û\\x9bý¨X\\x13>q_\\xa0ù1à\\\\\\x12Ë\\x97UÛ\\x99Æáh\\x98À¦ñMa¿ÜÒ\\x085§ja\\x9fÞ$Ï¾K%ïY&\\x0cë\\x8c\\x93\\x04ÃZïç»ºé¸NFbQ\\x1bØý8¡ðÝC\\x1fàGLä¿0ZW\\x15\\x1bY\\x80\\x8dÂ\\x00î\\x80±\\x8d\\x9a\\x8a\\x1eÊ\\x9ec\\x92*¡ÄpC},³!¯\\x99æ\\x07ûË\\xadÿ\\x1b\\x9a¯\\'y£\\x99\\x020ô\\x94\\x11[\\x15½U]æk\\x1eß \\x83Ìî\\x0bÊ\\x94@Õ[\\x19BIZã¨©qÍÞÑ|Xæº¶êá\\x0b7\\x07È\\x95H4oÙ¦ø\\x06Á\\x05ÝsÚog9}SßæäÎÑ\\x9bT\\x82çÒKÆò\\x9f`Âuÿ\\x08ææ\\x0e\\x95\\x9bÙ\\x0e4¼vl$1\\n\\x11\\x1f÷~Sk¼ª!L\\'@0=Ê\\x05/\\x19g*È6\\x15Æ\\x10\\x1a/§ö\"¾\\x98ÊóH\\x91Û\\x99\\x9b¦¶\\n\\x03n_\\xa0\\x00\\x14\\x10Ì\\x7f<tUÛ\\x99Ê\\x19\\x9aù\\x7fwñMUeÌ\\x01T±\\x90ja\\x8eª£v\\x068ºïY\\'6ìÊ±;<Zïç´fÁ?¥WëQ\\x1bÝ\"ÄDöCK\\x1fàNT\\x19bw¾É\\x15\\x1bY\\x963°\\x10µv±\\x8d\\x8aU\\x9bí)OÉ*¡2ÚaÉ\\x16.\\x82¯\\x99ç+\\x88ùÑ\\xa0ù\\x9a¯\\'uà¦Ë+²\\x8d\\x11[\\x1a:~\\xa0ÀÊ£ß \\x8e¼\\t\\x11AæèÕ[\\x19]CÈ%Ú\\x83qÍÈÞ\\x9a»ð\"\\nêáô7`\\x93øoÁoÙ¤S\\x1d³\\x86!}Úog2\\x04\\n×Ó?\\x89Ñ\\x9b]\\x0f\\x03ó?¤#\\x9f`ËmM\\x82ß÷1\\x95\\x9bÙ\\x1b¬\\x9a\\x1f\\x1cÃ1\\n\\n\\\\F.µ3êª!¶|9Ð\\x1e°G/\\x19dÿm\\x1b$]\\x88\\x1a/§\\x0e\\x18Æ5Xl\\x11\\x91Ûk)·\\x14í,\\x06_\\xa0\\x0cè°7ÂjYUÛ\\x99àm\\x8595\\x03ñMCàþ\\n¹GÙjayº?\\x92\\x02aÞïY$x7<\\x8e\\x8bbZïç±Æö/i\\x95\\x8cQ\\x1b*\\n$åâAP\\x1fàJÆ,Ã;ñN\\x15\\x1bY©p\\x1f\\x00\\x9aU±\\x8d\\x81g<¯Wþ&*¡;üEqe\\x94O¯\\x99å\\x8c©ø\\x1f#\\x0f\\x9a¯\\'qj\\x9eÁã\\nÌ\\x11[\\x1cæyù!;Ïß \\x88*ö\\x88r·¥Õ[\\x19qâ[el&qÍÇäÏ|gyÎêáûí.\\x08y\\x9a\\x1coÙ¥ÞwÌ\\x01VÒÚog05É±\\x15»fÑ\\x9b_\\x19|\\x9cý·´\\x9f`Ö\\x1f\\x0eé\\x1e\\x04\\x0c\\x95\\x9bÙ9¤\\x89®NH1\\n\\x04ei¡\\x88\\x1eüª!º\\x94PÉ[©\\x9e/\\x19bi\\x80²\\x0c¬N\\x1a/§ñ\\x9cn\\x0bLÚ\\x81\\x91Ûg¼|EÞXW_\\xa0\\x17ÕiÐÔøÈUÛ\\x99\\x80È³Ó\\x1f\\x87ñM;\\x12,«jâjja}Ú\\x84OH;ÛïY\"÷1Ý\\xadìòZïç±\\x015Z\\x19MPQ\\x1b&\\x19\\x0f´úhq\\x1fàHûëí\\x0b?\\x1a\\x15\\x1bYÊ?Y(&W±\\x8dú2 \\x1bª\\x05Ú*¡<«\\x96\\x19(J\\x05¯\\x99â\\x11yûËU\\x81y á~Öÿ\\x8aS<ª\\x83\\x8aùÐ²+Ç\\x1bÕEkn\\x8c\\x81WO}\\x0eq\\x05\\x92Þ;)í\\x80×Ï1A\\x05û¨\\n<þ!n´\\'Àí¹\\x01ù\\x8b\\x8b§|´\\x04ð\\xad·%ñ´\\x11\\x95¤t\\x06îJuG«§|á\\x88æ\\x86\\n8+FÔ¼.ùqtÇ÷\\x02äÿ»A\\x8f«Þä\\x12\\x88¿\\x18Ýv!Æ\\x9a\\x96vTñDðí\\x15=\\x05R\\x98Ú+zé\\xadhëC]\\x1bó\\x9bC\"\\x01mr:çv\\xad\\n\\x97\\xadã\\x13\\x00ÏÇ\\x1b\\x16\\x91]Ñ]¶\\x08\\x7fîÝ5g\\xa0\\x89+\\x80R£¿®¾Øh\\x12ô-¹ú+\\x80æõ½\\'q\\x99¥b\\x9cë:H9«tð\\x87L3å¯)¯ÉÂX\\x9c\\x9cp0\\x0fRv'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
